[package]
name = "raydium-amm-cpi"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-gen = "0.4.1"
anchor-lang = "0.31.1"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
idl-build = ["anchor-lang/idl-build"]
default = ["cpi"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
